--- a/meson_options.txt
+++ b/meson_options.txt
@@ -44,7 +44,7 @@ option(
 option(
   'dri-drivers',
   type : 'array',
-  value : [''],
+  value : [],
   choices : ['auto', 'i915', 'i965', 'r100', 'r200', 'nouveau', 'swrast'],
   description : 'List of dri drivers to build. If this is set to auto all drivers applicable to the target OS/architecture will be built'
 )
@@ -63,7 +63,7 @@ option(
 option(
   'gallium-drivers',
   type : 'array',
-  value : [''],
+  value : [],
   choices : [
     'auto', 'kmsro', 'radeonsi', 'r300', 'r600', 'nouveau', 'freedreno',
     'swrast', 'v3d', 'vc4', 'etnaviv', 'tegra', 'i915', 'svga', 'virgl',
@@ -282,7 +282,7 @@ option(
 option(
   'shared-llvm',
   type : 'combo',
-  value : 'auto',
+  value : 'enabled',
   choices : ['auto', 'true', 'false', 'enabled', 'disabled'],
   description : 'Whether to link LLVM shared or statically.'
 )
